Versao 1.0.21 OK com fix range mastercard

--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -75,5 +75,4 @@
 "Expiration in %s day","Vencimento em %s dia"
 "The barcode of your ticket bank is:","O código de barras do seu boleto é:"
 "Copy":"Copiar"
-"Print your ticket bank","Imprimir Boleto",
-"Brand","Bandeira"
+"Print your ticket bank","Imprimir Boleto"
